--- a/server/views/index.html
+++ b/server/views/index.html
@@ -1,4 +1,13 @@
-<div style="text-align: center;">
-    <h1>Titolo della pagina</h1>
-    <p>testo della pagina</p>
-</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>repl.it</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <script src="script.js"></script>
+    <header><h2>Hello World</h2></header>
+  </body>
+</html>
